tests/baselines/reference/asyncFunctionDeclaration9.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration9.ts(7,19): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration9.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async function foo(): Promise<void> {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }